# senior-design

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mainwindow.cpp  requirements.txt  vcpkg-configuration.json  vcpkg.json
docs/: BUILD.md
src/: CMakeLists.txt
src/das/: CMakeLists.txt  lidar.cpp
src/das/include/: lidar.hpp
src/das/test/: main.cpp
src/gui/: CMakeLists.txt  main.cpp
src/gui/cbuild/: CMakeCache.txt  Makefile  cmake_install.cmake
src/gui/client-driver/: client-driver.py  status-sender.py
src/gui/gui-interface/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/gui/netstring-client/: netstring-client.py
src/gui/v2-gui-interface/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
src/lidar-scanner/: CMakeLists.txt
src/lidar-testing/: PointCloud.py  Visualization.py  lidar.py  main.py
src/lidar-testing/lidar-data/: box.csv  cube.csv  cube.xyz  sandia.csv
src/lidar-testing/lidar-data-2d/: 20231015_140353.xyz
src/lidar-testing/lidar-data-old/: bottle.csv  george.xyz
src/pc-processor/: CMakeLists.txt  lidar_processor.cpp  lidar_processor.hpp  lidar_to_point_cloud.cpp  main.cpp  scanner_config.hpp  visualizer.cpp  visualizer.hpp
src/pc-processor/leveler/: leveler.hpp  real_leveler.hpp  simulated_leveler.cpp  simulated_leveler.hpp
src/pc-processor/registration/: CMakeLists.txt  icp_strategy.cpp  icp_strategy.hpp  main.cpp
src/pc-processor/utils/: units.hpp
src/pc-processor/visualizer/: visualizer.cpp  visualizer.hpp
src/puflow/: README.md
src/puflow/docker/: Dockerfile  README.md
src/puflow/input/: sandia-filtered.xyz
src/puflow/output/: george.xyz  new_sandia.xyz  sandia.xyz
src/scanner/: 20231221_210714.xyz  20231221_210929.xyz  20231221_211025.xyz  20231221_221525.xyz  20231221_221631.xyz  20231221_221723.xyz  20231223_201126.xyz  20231223_201416.xyz  20231223_201511.xyz  20231223_201544.xyz  20231223_201717.xyz  20231223_201802.xyz  20231223_201922.xyz  20231223_202024.xyz  20231223_202233.xyz  20231223_202611.xyz  20231223_211722.xyz  ArgSource.py  DepthCamera_2023-11-20-22-05-45.json  Lidar.py  NetstringClient.py  PointCloud.py  Visualization.py  human_server.py  lidar.py  lidar_test.py  main.py  requirements.txt  rplidar_new.py  run_scanner.bat  run_scanner.sh  run_scanner_2.bat  test.py
src/scanner/calibration/: bottom_background.xyz  bottom_cal.xyz  calibration.data  cube.stl  rect.stl  ref-duck-bottom.xyz  ref-duck-top.xyz  ref-rect-bottom.xyz  ref-rect-top.xyz  scan_bottom.xyz  scan_top.xyz  top_background.xyz  top_cal.xyz  ultimate_sandia.stl
src/scanner/lidar-data-2d/: 20231009_123948.xyz  (+73 more)
vcpkg-triplets/: x64-windows-mindynamic.cmake
(+263 files in other folders)
